--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # Docker project generated files to ignore
-#  if you want to ignore files created by your editor/tools,
-#  please consider a global .gitignore https://help.github.com/articles/ignoring-files
 .vagrant*
 bin
 docker/docker
@@ -24,4 +22,35 @@ vendor/pkg/
 pyenv
 Vagrantfile
 *.db
+
+
+
+# GO specific ignores
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+go.work.sum
+
+# env file
+.env
+
+# Local configuration file
 .devcontainer
+*.log
+*.DS_Store
+.vscode/
